# watchlist-config-generator

./: .gitignore  AUTHORS.rst  README.md  dev_environment.yml  prod_environment.yml  pyproject.toml  setup.cfg  setup.py
src/watchlist_config_generator/: __init__.py  cli.py  watchlist_config_generator.py
tests/: test_watchlist_config_generator.py
