[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
addopts = "-ra"
minversion = "6.0"
testpaths = "tests"
filterwarnings = [
    "once::Warning",
]


[tool.coverage.run]
branch = True
parallel = True
source = ["watchlist_config_generator"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = True


[tool.isort]
combine_as_imports = True
ensure_newline_before_comments = True
force_grid_wrap = 0
force_sort_within_sections = True
include_trailing_comma = True
line_length = 100
lines_after_imports = 2
multi_line_output = 3
use_parentheses = True

sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY

known_first_party = "watchlist_config_generator"
known_third_party = ["pytest", "setuptools"]








